--- a/Java/Pong/nbproject/project.properties
+++ b/Java/Pong/nbproject/project.properties
@@ -33,9 +33,11 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Pong
 excludes=
+file.reference.jSerialComm-2.7.0.jar=C:\\Users\\thoma\\Downloads\\jSerialComm-2.7.0.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.jSerialComm-2.7.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
